Transferred the ability to add list item attributes to the parent list element class.
Added a hover sub menu in javascript for the top nav.

Added click events for the hover menu and the sub nav menu li elements.

Separated hover menu css from main css so that it will not be loaded if javascript is turned off.

--- a/public/assets/modules/admin/styles/light/css/framework/Form.css
+++ b/public/assets/modules/admin/styles/light/css/framework/Form.css
@@ -44,6 +44,10 @@ div.form_errors, div.form_warnings, div.form_confirmations {
     font-weight: bold;
 }
 
+div.form_errors, div.form_confirmations, div.form_warnings {
+    margin-bottom: 10px;
+}
+
 div.form_errors {
     border: 1px solid #F16048;
     background: url("/assets/modules/admin/styles/light/images/error_message_icon.gif") no-repeat scroll 10px 10px #FAEBE7;
