--- a/public/assets/modules/admin/styles/light/css/main.css
+++ b/public/assets/modules/admin/styles/light/css/main.css
@@ -98,10 +98,14 @@ div.clear {
 
 #module_menu {
     border-top: 1px solid #2D444F;
-    background: url("/assets/modules/admin/styles/light/images/top_nav_background.gif") repeat-x scroll 0 100% #666E73;
     background-color: #666E73;
     padding-left: 30px;
     clear: both;
+    box-shadow: inset 0px -2px 3px #4D5255;
+	-o-box-shadow: inset 0px -2px 3px #4D5255;
+	-moz-box-shadow: inset 0px -2px 3px #4D5255; 
+    -webkit-box-shadow: inset 0px -2px 3px #4D5255;
+    behavior: url(/assets/htc/pie.php);
 }
 
 #modules_list {
@@ -120,7 +124,14 @@ div.clear {
 }
 
 #modules_list li.active {
-    background: url("/assets/modules/admin/styles/light/images/top_nav_active.gif") no-repeat scroll 0 0 transparent;
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#C84202), to(#E58616)); 
+    background: -webkit-linear-gradient(top, #C84202, #E58616);
+    background: -ms-linear-gradient(top, #C84202, #E58616);
+    background: -o-linear-gradient(top, #C84202, #E58616); 
+    background: -moz-linear-gradient(top, #C84202, #E58616);
+    background: linear-gradient(#C84202, #E58616);
+    -pie-background: linear-gradient(#C84202, #E58616);
+    behavior: url(/assets/htc/pie.php);
     font-weight: bold;
 }
 
@@ -237,11 +248,36 @@ div.clear {
 /* Footer */
 
 #footer	{
-    background: url("/assets/modules/admin/styles/light/images/footer_background.gif") repeat-x scroll 0 0 #E6E6E6;
-    padding: 105px 2.8em 2.8em;
     font-size: 10px;
 	clear: both;
 	text-align: center;
+}
+
+#footer_transition_1 {
+    height: 79px;
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FFFFFF), to(#DCDCDC)); 
+    background: -webkit-linear-gradient(top, #FFFFFF, #DCDCDC);
+    background: -ms-linear-gradient(top, #FFFFFF, #DCDCDC);
+    background: -o-linear-gradient(top, #FFFFFF, #DCDCDC); 
+    background: -moz-linear-gradient(top, #FFFFFF, #DCDCDC);
+    background: linear-gradient(#FFFFFF, #DCDCDC);
+    -pie-background: linear-gradient(#FFFFFF, #DCDCDC);
+    behavior: url(/assets/htc/pie.php);
+}
+
+#footer_transition_2 {
+    height: 8px;
+    background-color: #FFFFFF;
+    border-bottom: 1px solid #8C8C8C;
+    box-shadow: 0px 1px 1px #BABABA;
+	-o-box-shadow: 0px 1px 1px #BABABA;
+	-moz-box-shadow: 0px 1px 1px #BABABA; 
+    -webkit-box-shadow: 0px 1px 1px #BABABA;
+    behavior: url(/assets/htc/pie.php);
+}
+
+#footer_text {
+    padding: 17px 2.8em 0px 2.8em;
 }
 
 #footer a {
