--- a/public/assets/modules/admin/styles/light/css/framework/Button.css
+++ b/public/assets/modules/admin/styles/light/css/framework/Button.css
@@ -11,7 +11,7 @@ input.form_button, input.button {
     background: -ms-linear-gradient(top, #FFAC47, #F56C06);
     background: -o-linear-gradient(top, #FFAC47, #F56C06); 
     background: -moz-linear-gradient(top, #FFAC47, #F56C06);
-    background: linear-gradient(FFAC47, #F56C06);
+    background: linear-gradient(#FFAC47, #F56C06);
     -pie-background: linear-gradient(#FFAC47, #F56C06);
     behavior: url(/assets/htc/pie.php);
 }
