Changed admin module doctype to 1.0 transitional. Upgraded to CSS3Pie version 1.0 beta 5. Increased layout compatibility with IE browsers.

--- a/public/assets/modules/admin/styles/light/css/framework/Button.css
+++ b/public/assets/modules/admin/styles/light/css/framework/Button.css
@@ -3,6 +3,8 @@ input.form_button {
 }
 
 input.form_button, input.button {
+    z-index: 9998px;
+    background-color: #F56C06;
     color: #FFFFFF;
 	border-color: #ED6502 #A04300 #A04300 #ED6502;
 	font-weight: bold;
