--- a/public/assets/modules/admin/styles/light/css/framework/TableForm.css
+++ b/public/assets/modules/admin/styles/light/css/framework/TableForm.css
@@ -3,7 +3,7 @@
     padding: 5px;
     font-size: 12px;
     font-weight: normal;
-    background: none repeat scroll 0 0 #6F8992;
+    background: none repeat scroll 0 0 #6F8992 !important;
     color: #FFFFFF;
 }
 
