--- a/public/assets/modules/admin/styles/light/css/main.css
+++ b/public/assets/modules/admin/styles/light/css/main.css
@@ -162,7 +162,6 @@ div.clear {
 }
 
 #left_content {
-    left: 1px;
 	width: 220px;
 	min-height: 450px;
 	padding-bottom: 25px;
@@ -178,26 +177,22 @@ div.clear {
     position: relative;
 }
 
-#sub_nav ul:hover {
-    cursor: pointer;
-}
-
 #sub_nav ul li {
-    position: relative;
     background-color: #E7EFEF;
     border-bottom: 1px dashed #BEBEBE;
     border-right: 1px solid #BEBEBE;
+}
+
+#sub_nav ul li a, #sub_nav ul li a:hover {
+    display: block;
     padding: 5px 0px 5px 20px;
-}
-
-#sub_nav ul li:hover {
-    background-color: #D8E6E6;
-}
-
-#sub_nav ul li a, #sub_nav ul li a:hover, #sub_nav ul li a:link, #sub_nav ul li a:active, #sub_nav ul li a:visited {
     color: #000000;
     font-size: 12px;
     text-decoration: none;
+}
+
+#sub_nav ul li a:hover {
+    background-color: #D8E6E6;
 }
 
 #sub_nav ul li.active {
@@ -207,13 +202,9 @@ div.clear {
     z-index: 102;
 }
 
-#sub_nav ul li.active:hover {
-    background-color: #FFFFFF;
-    cursor: pointer;
-}
-
-#sub_nav ul li.active a {
+#sub_nav ul li.active a, #sub_nav ul li.active a:hover {
     font-weight: bold;
+    background-color: #FFFFFF;
 }
 
 /* End Left Menu */
@@ -223,6 +214,7 @@ div.clear {
 /* Right Content */
 
 #right_content {
+    left: -1px;
 	width: 79%;
 	min-height: 450px;
 	border-left: 1px solid #98AAB1;
