Added the Assets mode of the framework. Migrated the css, javascript, and htc assets index php files to use the the Assets mode. Migrated styles to use the new htc index php file.  Implemented the Last-Modified and Etag response headers in the File framework mode to serve 304 status codes if a client has downloaded the same file before.

--- a/modules/admin/assets/styles/light/css/framework/Button.css
+++ b/modules/admin/assets/styles/light/css/framework/Button.css
@@ -15,7 +15,7 @@ input.form_button, input.button {
     background: -moz-linear-gradient(top, #FFAC47, #F56C06);
     background: linear-gradient(#FFAC47, #F56C06);
     -pie-background: linear-gradient(#FFAC47, #F56C06);
-    behavior: url(/assets/htc/pie.php);
+    behavior: url(/assets/modules/resume/htc/pie);
 }
 
 input.button {
