Reorganized the core and debug framework folders so that corresponding objects are grouped by mode.
Fixed implementation of initializeNotFound() static function in the File framework mode.

Converted the minify object from a static class to a library including base class and child classes.

Changed the update script to loop through every file on the CMS and add it to APC using apc_compile_file().

Changed the cache directory validation to check each module's cache directory instead of the root one that was previously removed.

Changed the error handler logging to log to the new logs/ directory in the installation directory's root.

Cleaned up framework singletons. Functions framework(), page(), and config() have been removed and replaced with better alternatives.

Changed instance retrieval static methods to be named getInstance() uniformly.

Moved page CSS and JS processing to happen before the page is rendered instead of during rendering.

Changed field objects to store and return file paths instead of adding them directly to the page object using the page() function.

Built the ResultSet library to dynamically build a base dataset and apply filter criteria to it.

Fixed a bug on the admin Errors View All page where the module_id did not carry over into table links.

Revamped DataTable to support multiple filter fields and filter fields within the header.

Added a DataTable JS object to handle dynamic refreshing of the table's state via AJAX.

Fixed an issue with IntField where its JS object threw an error if the field did not have a max length property.

Added an option to toggle an element's JS.

Sepatated the session variables used on the admin Errors View All DataTable so that view state settings aren't shared between the root and module versions of the page.

Removed __call() declarations used to catch unknown functions since the framework error handler can catch those kinds of fatal errors.

Changed the session handler to return an empty string instead of th

--- a/modules/admin/assets/styles/light/css/framework/DataTable.css
+++ b/modules/admin/assets/styles/light/css/framework/DataTable.css
@@ -1,8 +1,13 @@
+.data_table input.textbox {
+    width: auto;
+}
+
 .data_table div.top_menu {
     clear: both;
 }
 
 .data_table div.table_menu {
+    clear: both;
     text-align: right;
 }
 
@@ -15,7 +20,7 @@
 }
 
 .data_table div.pagination {
-    /*float: right;*/
+    float: left;
     display: inline;
 }
 
@@ -31,4 +36,8 @@
 
 .data_table .table_header {
     vertical-align: middle;
+}
+
+.data_table .filters th {    
+    background: none repeat scroll 0 0 #E3EFF1;
 }
